test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
warning: Returned value is ignored
    --> sway-lib-std/src/codec.sw:3181:5
     |
...
3181 |     T::is_memcopy();
     |     --------------- This returns a value which is not assigned to anything and is ignored.
     |     --------------- help: The returned value has type "bool".
     |
     = help: If you want to intentionally ignore the returned value, use `let _ = ...`:
     = help:   let _ = T::is_memcopy();
____

  Compiled library "std" with 1 warning.
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
warning: Returned value is ignored
    --> sway-lib-std/src/codec.sw:3181:5
     |
...
3181 |     T::is_memcopy();
     |     --------------- This returns a value which is not assigned to anything and is ignored.
     |     --------------- help: The returned value has type "bool".
     |
     = help: If you want to intentionally ignore the returned value, use `let _ = ...`:
     = help:   let _ = T::is_memcopy();
____

  Compiled library "std" with 1 warning.
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
    Finished debug [unoptimized + fuel] target(s) [80 B] in ???
